--- a/webapp/src/components/ParcelCoords/ParcelCoords.css
+++ b/webapp/src/components/ParcelCoords/ParcelCoords.css
@@ -1,6 +1,16 @@
-.ParcelCoords {
+.ParcelCoords .collapsable-content {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
-.see-more-wrapper {
-  overflow: hidden;
+.ParcelCoords .collapsable-content .ParcelCoord {
+  margin-right: 16px;
+  margin-bottom: 16px;
+}
+
+@media (min-width: 767px) {
+  .ParcelCoords {
+    margin-top: 20px;
+  }
 }
