feat: don't even render Collapsable if it's not necessary

--- a/webapp/src/components/ParcelCoords/ParcelCoords.css
+++ b/webapp/src/components/ParcelCoords/ParcelCoords.css
@@ -1,10 +1,11 @@
-.ParcelCoords .collapsable-content {
+.ParcelCoords .collapsable-content,
+.ParcelCoords .coordinates {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
 }
 
-.ParcelCoords .collapsable-content .ParcelCoord {
+.ParcelCoords .ParcelCoord {
   margin-right: 16px;
   margin-bottom: 16px;
 }
