--- a/webapp/src/components/AuctionPage/AuctionPage.css
+++ b/webapp/src/components/AuctionPage/AuctionPage.css
@@ -49,30 +49,17 @@
   color: var(--gray);
 }
 
-.AuctionPage .auction-details .parcels-included-parcels.column {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.AuctionPage .parcels-included {
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-  padding: 16px 24px 0;
-}
-
-.AuctionPage .ui.warning.message {
-  margin-bottom: 20px;
-}
-
-.AuctionPage .parcels-included .ParcelCoord {
-  margin-right: 16px;
-  margin-bottom: 16px;
+.AuctionPage .ParcelCoords {
+  margin-left: 24px;
 }
 
 .AuctionPage .ParcelCoord.has-status .attribute {
   border-color: var(--gray);
   color: var(--gray);
+}
+
+.AuctionPage .ui.warning.message {
+  margin-bottom: 20px;
 }
 
 .AuctionPage footer {
@@ -154,10 +141,6 @@
   .AuctionPage .bid-wrapper {
     margin-top: 20px;
   }
-
-  .AuctionPage .parcels-included {
-    margin-top: 10px;
-  }
 }
 
 @media (max-width: 768px) {
@@ -175,6 +158,10 @@
     right: 0;
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .AuctionPage .auction-panel {
+    padding-top: 16px;
   }
 
   .AuctionPage footer,
