--- a/webapp/src/components/AuctionStaticPage/AuctionStaticPage.css
+++ b/webapp/src/components/AuctionStaticPage/AuctionStaticPage.css
@@ -1,11 +1,16 @@
-.Page {
+.Page > div.AuctionStaticPage {
   position: relative;
 }
 
-.Page > div.AuctionStaticPage {
+.Page > div.AuctionStaticPage .AtlasPage {
+  position: initial;
+}
+
+.Page > div.AuctionStaticPage .component-wrapper {
   color: var(--text);
   background: #09101fde;
   width: 100%;
+  height: 100%;
   text-align: center;
   margin: auto;
   position: absolute;
@@ -14,8 +19,4 @@
   display: flex;
   align-items: center;
   z-index: 9999;
-}
-
-.Page > div.AuctionStaticPage .component-wrapper {
-  width: 100%;
 }
