feat: auction countdown (#718)
This PR is based on #695 following the same approach and using the component in a reusable way.

Closes #698

--- a/webapp/src/components/HomePage/HomePage.css
+++ b/webapp/src/components/HomePage/HomePage.css
@@ -48,6 +48,18 @@
   min-height: 125px;
 }
 
+.HomePage .banner-wrapper {
+  margin-bottom: 40px;
+}
+
+.HomePage .banner-wrapper .button {
+  padding: 10px 35px;
+}
+
+.HomePage .banner-wrapper a {
+  margin: auto;
+}
+
 .HomePage .publications-header {
   display: flex;
   justify-content: space-between;
