style: first iteration in mobile support

--- a/webapp/src/components/Footer/Footer.css
+++ b/webapp/src/components/Footer/Footer.css
@@ -102,6 +102,12 @@
   }
 }
 
+@media (max-width: 768px) {
+  .AuctionPage + .Footer {
+    display: none;
+  }
+}
+
 @media (max-width: 600px) {
   .Footer .footer-column {
     padding: 22px 20px;
