fix: center buttons in modal

--- a/webapp/src/components/AuctionPage/AuctionPage.css
+++ b/webapp/src/components/AuctionPage/AuctionPage.css
@@ -317,4 +317,8 @@
   .AuctionPage .output-information .information-block + .information-block {
     margin-left: 0px;
   }
+
+  .BidConfirmationModal .modal-body .actions .button {
+    width: 100%;
+  }
 }
