--- a/webapp/src/components/AuctionStaticPage/AuctionStaticPage.css
+++ b/webapp/src/components/AuctionStaticPage/AuctionStaticPage.css
@@ -1,5 +1,6 @@
 .Page > div.AuctionStaticPage {
   position: relative;
+  padding: 0px;
 }
 
 .Page > div.AuctionStaticPage .AtlasPage {
@@ -18,5 +19,4 @@
   left: 0;
   display: flex;
   align-items: center;
-  z-index: 9999;
 }
