--- a/webapp/src/components/Countdown/Countdown.css
+++ b/webapp/src/components/Countdown/Countdown.css
@@ -19,8 +19,18 @@
   margin-bottom: 0;
 }
 
+.banner .Countdown-col-element p {
+  font-size: 2em;
+}
+
 .Countdown-col-element span {
   text-transform: capitalize
+}
+
+@media(min-width: 380px) {
+  .Countdown-col-element p {
+    font-size: 2em;
+  }
 }
 
 @media(min-width: 768px) {
@@ -30,11 +40,5 @@
 
   .Countdown-col-element p {
     font-size: 4em;
-  }
-}
-
-@media(min-width: 380px) {
-  .Countdown-col-element p {
-    font-size: 2em;
   }
 }
