--- a/webapp/src/components/Modal/AuctionModal/AuctionModal.css
+++ b/webapp/src/components/Modal/AuctionModal/AuctionModal.css
@@ -17,6 +17,7 @@
   font-size: 15px;
   line-height: 1.53;
   letter-spacing: -0.2px;
+  margin-top: 40px;
 }
 
 .AuctionModal .modal-body .agree-to-terms {
