--- a/webapp/src/components/Modal/AuctionModal/AuctionModal.css
+++ b/webapp/src/components/Modal/AuctionModal/AuctionModal.css
@@ -10,7 +10,7 @@
 
 .AuctionModal .title {
   margin-bottom: 16px;
-  font-size: 32px;
+  font-size: 2.4em;
 }
 
 .AuctionModal .modal-body .description {
