--- a/webapp/src/components/AuctionCountdown/AuctionCountdown.css
+++ b/webapp/src/components/AuctionCountdown/AuctionCountdown.css
@@ -8,6 +8,10 @@
   text-align: center;
 }
 
+.AuctionCountdown .title {
+  font-size: 2.4em;
+}
+
 .AuctionCountdown.banner {
   background: #232027;
 }
