--- a/webapp/src/components/AuctionCountdown/AuctionCountdown.css
+++ b/webapp/src/components/AuctionCountdown/AuctionCountdown.css
@@ -8,6 +8,10 @@
   text-align: center;
 }
 
+.AuctionCountdown .title {
+  font-size: 2.4em;
+}
+
 .AuctionCountdown.banner {
   background: #232027;
 }
@@ -22,9 +26,9 @@
   align-items: center;
 }
 
-@media (min-width: 400px) {
+@media (min-width: 450px) {
   .AuctionCountdown {
-    padding: 40px;
+    padding: 40px 70px;
   }
 }
 
