--- a/webapp/src/components/Modal/AuctionModal/AuctionModal.css
+++ b/webapp/src/components/Modal/AuctionModal/AuctionModal.css
@@ -10,13 +10,14 @@
 
 .AuctionModal .title {
   margin-bottom: 16px;
-  font-size: 32px;
+  font-size: 2.4em;
 }
 
 .AuctionModal .modal-body .description {
   font-size: 15px;
   line-height: 1.53;
   letter-spacing: -0.2px;
+  margin-top: 40px;
 }
 
 .AuctionModal .modal-body .agree-to-terms {
