feat: show tx idle on parcels bid

--- a/webapp/src/components/Modal/BidConfirmationModal/BidConfirmationModal.css
+++ b/webapp/src/components/Modal/BidConfirmationModal/BidConfirmationModal.css
@@ -106,4 +106,9 @@
   .BidConfirmationModal .modal-body {
     width: 605px;
   }
+
+  .BidConfirmationModal .ui.icon.message {
+    width: 70%;
+    margin: 15px auto 0;
+  }
 }
