--- a/webapp/src/components/SignInPage/SignInPage.css
+++ b/webapp/src/components/SignInPage/SignInPage.css
@@ -1,11 +1,3 @@
-.SignInPage h1 {
-  margin-top: 50px;
-}
-
-.SignInPage .sign-in-options {
-  color: var(--gray);
-}
-
-.StaticPage .message {
+.SignInPage .message {
   padding: 0 38px;
 }
