style: center sign in notice in screen

--- a/webapp/src/components/SignInNotice/SignInNotice.css
+++ b/webapp/src/components/SignInNotice/SignInNotice.css
@@ -1,3 +1,14 @@
+.SignInNotice {
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .SignInNotice h1 {
   margin-top: 50px;
 }
