--- a/webapp/src/components/SignInNotice/SignInNotice.css
+++ b/webapp/src/components/SignInNotice/SignInNotice.css
@@ -1,6 +1,27 @@
 .SignInNotice {
-  display: block;
-  text-align: center;
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.SignInNotice h1 {
   margin-top: 50px;
+}
+
+.SignInNotice .content p {
   color: var(--gray);
+  margin-bottom: 0;
+}
+
+.SignInNotice .ui.button {
+  margin-top: 35px;
+}
+
+.SignInNotice .message {
+  padding: 0 38px;
 }
