feat: cache the cache (#798)
* feat: create and listen to db notifications

* feat: add caching to the tiles object and use it on the routers. split routers

* feat: support map address and cache

* chore: restore eth events

* chore: remove unused

* feat: return some map restrictions (legacy support)

* feat: fetch the entire map

* feat: fix analyze. slow tiles check

* chore: lint

* feat: mini-map address

* fix: popup placement

* feat: update state on actions (missing stuff)

* feat: finish reactively updating state

* chore: unused qs

* feat: fix minimap. feedback

* fix: expired publications

* fix: lint

* fix: remove race condition

* fix: avoid conflict with react

* chore: add env example

--- a/webapp/src/components/ParcelPreview/ParcelCanvas/Minimap/Minimap.css
+++ b/webapp/src/components/ParcelPreview/ParcelCanvas/Minimap/Minimap.css
@@ -6,16 +6,17 @@
   bottom: 20px;
   z-index: 1040;
   opacity: 1;
-  border: 2px solid #0d0e18;
-  border-bottom: none;
   box-shadow: 0 0px 35px rgba(0, 0, 0, 0.4);
+  border: 2px solid #0d0e18;
+  border-bottom: 0;
   border-radius: 5px;
 }
 
 .Minimap img {
-  position: absolute;
   top: 0;
   left: 0;
+  position: absolute;
+  border-radius: 5px;
 }
 
 .Minimap .minimap-focus {
