--- a/webapp/src/components/ProfilePage/ProfilePage.css
+++ b/webapp/src/components/ProfilePage/ProfilePage.css
@@ -27,6 +27,10 @@
   color: var(--gray);
 }
 
+.ProfilePage .profile-grid .bids-title.placed {
+  margin-top: 50px
+}
+
 .ProfilePage .pagination {
   margin-top: 50px;
   margin-bottom: 50px;
@@ -81,5 +85,9 @@
 @media (max-width: 768px) {
   .ProfilePage .profile-menu .menu.secondary .item {
     border-color: transparent !important;
+  }
+
+  .ProfilePage .profile-grid .bids-title {
+    margin-bottom: 30px;
   }
 }
